# ssh-colors

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  sync-ssh-profiles.py
.github/workflows/: release.yml
scripts/: gh-build.sh  gh-logs.sh
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
